--- a/pages/10356.html
+++ b/pages/10356.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1061,6 +1061,14 @@ margin-left: 0em;
 <li>
 <p>M. Billo’, B. Craps, F. Roose, <em>Orbifold boundary states from Cardy’s condition</em>, JHEP 0101:038, 2001 (<a href="https://arxiv.org/abs/hep-th/0011060">arXiv:hep-th/0011060</a>)</p>
 </li>
+
+<li id="QuirozStefanski01">
+<p>N. Quiroz, B. Stefanski Jr, <em>Dirichlet Branes on Orientifolds</em>, Phys.Rev. D66 (2002) 026002 (<a href="https://arxiv.org/abs/hep-th/0110041">arXiv:hep-th/0110041</a>)</p>
+</li>
+
+<li id="MMR06">
+<p>Jaydeep Majumder, Subir Mukhopadhyay, Koushik Ray, <em>Fractional Branes in Non-compact Type IIA Orientifolds</em>, JHEP0611:008, 2006 (<a href="https://arxiv.org/abs/hep-th/0602135">arXiv:hep-th/0602135</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -1068,14 +1076,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 15:12:36.
+  Last revised on September 28, 2018 at 07:28:58.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
