--- a/pages/19727.html
+++ b/pages/19727.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9057/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9057/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -762,44 +762,135 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#relation_to_ktheory'>Relation to K-theory</a></li>
+<li><a href='#for_wzw_models'>For WZW models</a></li>
+<li><a href='#for_gepner_models'>For Gepner models</a></li>
+<li><a href='#on_orbifolds'>On orbifolds</a></li>
+</ul>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
 
-<p>…<a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on <a class="existingWikiWord" href="/nlab/show/manifolds+with+boundary">manifolds with boundary</a></p>
+<p>The study of <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on <a class="existingWikiWord" href="/nlab/show/manifolds+with+boundary">manifolds with boundary</a> is known as <em>boundary conformal field theory</em> (often abbreviated as BCFT).</p>
 
-<p>…for <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a> boundary states in boundary CFT constitute an algebraic way description of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> and in particular of <a class="existingWikiWord" href="/nlab/show/fractional+D-branes">fractional D-branes</a></p>
+<p>For the special case of <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a> understood as the <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> on the <a class="existingWikiWord" href="/nlab/show/worldsheet">worldsheet</a> of <a class="existingWikiWord" href="/nlab/show/strings">strings</a>, boundary conformal field theories is about <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> with prescribed <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> for the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a>. These boundary conditions are interpreted as the <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> that the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> may “end on”.</p>
+
+<p>In this way 2d BCFT can serve to give an <a class="existingWikiWord" href="/nlab/show/algebra">algebraic</a> definition of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a>, independent of or complementary to their incarnation in the <a class="existingWikiWord" href="/nlab/show/target+space">target</a>-<a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>. In particular <a class="existingWikiWord" href="/nlab/show/fractional+D-branes">fractional D-branes</a> may be described this way as boundary conditions for the <a class="existingWikiWord" href="/nlab/show/2d+CFTs">2d CFTs</a> describing <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> propagating in <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a>.</p>
+
+<p>A key tool of BCFT is the <em>boundary state</em> formalism, where one interprets <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> for the <a class="existingWikiWord" href="/nlab/show/open+string">open string</a> as <a class="existingWikiWord" href="/nlab/show/coherent+states">coherent states</a> of the corresponding <a class="existingWikiWord" href="/nlab/show/closed+string">closed string</a> <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a>. The physical interpretation of this algebraic fact is that the <a class="existingWikiWord" href="/nlab/show/D-brane">D-brane</a>, being <a class="existingWikiWord" href="/nlab/show/mass">massive</a> (see also at <em><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></em>) emits and absorbs <a class="existingWikiWord" href="/nlab/show/gravitons">gravitons</a>, which, in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>, are excitations of the <a class="existingWikiWord" href="/nlab/show/closed+string">closed string</a>.</p>
+
+<p>It has been argued that, therefore, for <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a> <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a>s the classification of <a class="existingWikiWord" href="/nlab/show/equivalence+classes">equivalence classes</a> of BCFT boundary states under <a class="existingWikiWord" href="/nlab/show/renormalization+group+flow">renormalization group flow</a> should reproduce the expected classification of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> by the (<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/twisted+K-theory">twisted K-theory</a>) <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/target+spacetime">target spacetime</a> (<a href="#Moore03">Moore 03, section 3</a>).</p>
+
+<p>While this gives, in principle, a precise algebraic definition of <a class="existingWikiWord" href="/nlab/show/D-brane+charge">D-brane charge</a> from the <a class="existingWikiWord" href="/nlab/show/worldsheet">worldsheet</a>-perspective, in practice it is hard to follow the <a class="existingWikiWord" href="/nlab/show/renormalization+group+flow">renormalization group flow</a> of the boundary states. The proposal has been checked in some special cases (e.g. <a href="#BraunSchaeferNameki05">Braun &amp; Schaefer-Nameki 05</a>). Other authors reported some discrepancies (<a href="#QuirozStefanski01">Quiroz-Stefanski 01</a>)</p>
 
 <h2 id="references">References</h2>
 
-<ul>
-<li id="RecknagelSchomerus99">
-<p><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Deformation Theory and Moduli Spaces of D-Branes</em>, Nucl.Phys. B545 (1999) 233-282 (<a href="https://arxiv.org/abs/hep-th/9811237">arXiv:hep-th/9811237</a>)</p>
-</li>
+<h3 id="general">General</h3>
 
-<li id="RecknagelSchomerus13">
-<p><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Conformal Field Theory and the Worldsheet Approach to D-branes</em>, Cambirdge 2013 (<a href="http://inspirehep.net/record/1308990">spire:1308990</a>)</p>
+<p>The boundary state formalism in BCFT is due to</p>
+
+<ul>
+<li>
+<p>C. G. Callan, C. Lovelace, C. R. Nappi and S. A. Yost, <em>Adding holes and crosscaps to the superstring</em>, Nucl. Phys. B 293 (1987) 83 (<a href="https://doi.org/10.1016/0550-3213(87)90065-4">doi:10.1016/0550-3213(87)90065-4</a>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Giovanni+Felder">Giovanni Felder</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrg+Fr%C3%B6hlich">Jürg Fröhlich</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, <em>The geometry of WZW branes</em> (<a href="https://arxiv.org/abs/hep-th/9909030">arXiv:hep-th/9909030</a>)</p>
+<p>C. G. Callan, C. Lovelace, C. R. Nappi and S. A. Yost, <em>Loop corrections to superstring equations of motion</em>, Nucl. Phys. B308 (1988) 221 (<a href="https://www.researchgate.net/profile/Scott_Yost/publication/222468211_Loop_Corrections_to_Superstring_Equations_of_Motion/links/5a54d5eda6fdccd72f5b4583/Loop-Corrections-to-Superstring-Equations-of-Motion.pdf">pdf</a>)</p>
 </li>
 
+<li>
+<p>N. Ishibashi, <em>Boundary and Crosscap States in Conformal Field Theories</em>, Mod. Phys. Lett. A4(1989) 251 (<a href="https://inis.iaea.org/collection/NCLCollectionStore/_Public/20/072/20072844.pdf#page=125">pdf</a>)</p>
+</li>
+
+<li>
+<p>N. Ishibashi and T. Onogi, <em>Open string model building</em>, Nucl. Phys. B318(1989) 239 (<a href="https://doi.org/10.1016/0550-3213(89)90054-0">doi:10.1016/0550-3213(89)90054-0</a>)</p>
+</li>
+
+<li>
+<p><a href="#DixonFriedanMartinecShenker87">Dixon-Friedan-Martinec-Shenker 87</a></p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li id="RecknagelSchomerus13"><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Conformal Field Theory and the Worldsheet Approach to D-branes</em>, Cambridge 2013 (<a href="http://inspirehep.net/record/1308990">spire:1308990</a>)</li>
+</ul>
+
+<p>A textbook account is in</p>
+
+<ul>
+<li id="RecknagelSchomerus99"><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Deformation Theory and Moduli Spaces of D-Branes</em>, Nucl.Phys. B545 (1999) 233-282 (<a href="https://arxiv.org/abs/hep-th/9811237">arXiv:hep-th/9811237</a>)</li>
+</ul>
+
+<h3 id="relation_to_ktheory">Relation to K-theory</h3>
+
+<p>The suggestion that <a class="existingWikiWord" href="/nlab/show/renormalization+group+flow">renormalization group flow</a>-<a class="existingWikiWord" href="/nlab/show/equivalence+classes">equivalence classes</a> of boundary states in 2d BCFT should realize the expected classification of <a class="existingWikiWord" href="/nlab/show/D-brane+charge">D-brane charge</a> in (<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> apparntly goes back to</p>
+
+<ul>
+<li id="Moore03"><a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, section 3 of <em>K-Theory from a physical perspective</em> (<a href="https://arxiv.org/abs/hep-th/0304018">arXiv:hep-th/0304018</a>)</li>
+</ul>
+
+<p>This has been checked in examples in</p>
+
+<ul>
+<li id="BraunSchaeferNameki05"><a class="existingWikiWord" href="/nlab/show/Volker+Braun">Volker Braun</a>, Sakura Schafer-Nameki, <em>D-Brane Charges in Gepner Models</em>, J.Math.Phys. 47 (2006) 092304 (<a href="https://arxiv.org/abs/hep-th/0511100">arXiv:hep-th/0511100</a>)</li>
+</ul>
+
+<p>A mismatch was claimed in</p>
+
+<ul>
+<li><a href="#QuirozStefanski01">Quiroz-Stefanski 01</a></li>
+</ul>
+
+<h3 id="for_wzw_models">For WZW models</h3>
+
+<p>For <a class="existingWikiWord" href="/nlab/show/WZW+models">WZW models</a>:</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Giovanni+Felder">Giovanni Felder</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrg+Fr%C3%B6hlich">Jürg Fröhlich</a>, <a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, <em>The geometry of WZW branes</em> (<a href="https://arxiv.org/abs/hep-th/9909030">arXiv:hep-th/9909030</a>)</li>
+</ul>
+
+<h3 id="for_gepner_models">For Gepner models</h3>
+
+<p>For <a class="existingWikiWord" href="/nlab/show/Gepner+models">Gepner models</a>:</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, J. Walcher, <em>Projections in string theory and boundary states for Gepner models</em>, Nucl.Phys. B588 (2000) 110-148 (<a href="https://arxiv.org/abs/hep-th/0003298">arXiv:hep-th/0003298</a>)</p>
 </li>
+
+<li>
+<p><a href="#BraunSchaeferNameki05">Braun &amp; Schaefer-Nameki 05</a></p>
+</li>
 </ul>
+
+<h3 id="on_orbifolds">On orbifolds</h3>
 
 <p>Discussion specifically concerning <a class="existingWikiWord" href="/nlab/show/fractional+D-branes">fractional D-branes</a> on <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> includes</p>
 
 <ul>
+<li id="DixonFriedanMartinecShenker87">
+<p><a class="existingWikiWord" href="/nlab/show/Lance+Dixon">Lance Dixon</a>, <a class="existingWikiWord" href="/nlab/show/Daniel+Friedan">Daniel Friedan</a>, <a class="existingWikiWord" href="/nlab/show/Emil+Martinec">Emil Martinec</a>, <a class="existingWikiWord" href="/nlab/show/Stephen+Shenker">Stephen Shenker</a>, <em>The conformal field theory of orbifolds</em>, Nucl. Phys. B 282 (1987) 13. (<a href="https://doi.org/10.1016/0550-3213(87)90676-6">doi:10.1016/0550-3213(87)90676-6</a>)</p>
+</li>
+
 <li id="DiaconescuGomis99">
 <p>Diaconescu, <a class="existingWikiWord" href="/nlab/show/Jaume+Gomis">Jaume Gomis</a>, <em>Fractional Branes and Boundary States in Orbifold Theories</em>, JHEP 0010 (2000) 001 (<a href="https://arxiv.org/abs/hep-th/9906242">arXiv:hep-th/9906242</a>)</p>
 </li>
 
 <li>
 <p>M. Billo’, B. Craps, F. Roose, <em>Orbifold boundary states from Cardy’s condition</em>, JHEP 0101:038, 2001 (<a href="https://arxiv.org/abs/hep-th/0011060">arXiv:hep-th/0011060</a>)</p>
+</li>
+
+<li id="QuirozStefanski01">
+<p>N. Quiroz, B. Stefanski Jr, <em>Dirichlet Branes on Orientifolds</em>, Phys.Rev. D66 (2002) 026002 (<a href="https://arxiv.org/abs/hep-th/0110041">arXiv:hep-th/0110041</a>)</p>
+</li>
+
+<li id="MMR06">
+<p>Jaydeep Majumder, Subir Mukhopadhyay, Koushik Ray, <em>Fractional Branes in Non-compact Type IIA Orientifolds</em>, JHEP0611:008, 2006 (<a href="https://arxiv.org/abs/hep-th/0602135">arXiv:hep-th/0602135</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -808,14 +899,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 27, 2018 at 15:37:24.
+  Last revised on September 28, 2018 at 07:57:54.
   See the <a href="https://ncatlab.org/nlab/history/boundary conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/boundary conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
