--- a/pages/17973.html
+++ b/pages/17973.html
@@ -935,7 +935,7 @@ margin-left: 0em;
 
 <h3 id="Cosmology">Cosmology</h3>
 
-<p>Since the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/BPS+state">BPS</a> <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spaces">anti de Sitter spaces</a> with the unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere around the brane, the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting D-brane models realizes the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> of an <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a>, or similar. Models roughly of this kind are known as <a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+models">Randall-Sundrum models</a> (see for instance <a href="#Kaloper04">Kaloper 04</a>, <a href="#FlachiMinamitsuji09">Flachi-Minamitsuji 09</a>).</p>
+<p>Since the <a class="existingWikiWord" href="/nlab/show/near+horizon+geometry">near horizon geometry</a> of <a class="existingWikiWord" href="/nlab/show/BPS+state">BPS</a> <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spaces">anti de Sitter spaces</a> with the unit <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-sphere around the brane, the <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> of intersecting D-brane models realizes the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> of an <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a>, or close (see for instance <a href="#Kaloper04">Kaloper 04</a>, <a href="#FlachiMinamitsuji09">Flachi-Minamitsuji 09</a>). The basic structure is hence that of <em><a class="existingWikiWord" href="/nlab/show/Randall-Sundrum+models">Randall-Sundrum models</a></em>, but details may differ.</p>
 
 <h2 id="references">References</h2>
 
@@ -1124,14 +1124,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 03:05:39.
+  Last revised on September 28, 2018 at 07:25:24.
   See the <a href="https://ncatlab.org/nlab/history/intersecting D-brane model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/intersecting D-brane model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
