--- a/pages/19727.html
+++ b/pages/19727.html
@@ -776,7 +776,7 @@ margin-left: 0em;
 
 <p>The study of <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on <a class="existingWikiWord" href="/nlab/show/manifolds+with+boundary">manifolds with boundary</a> is known as <em>boundary conformal field theory</em> (often abbreviated as BCFT).</p>
 
-<p>For the special case of <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a> understood as the <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> on the <a class="existingWikiWord" href="/nlab/show/worldsheet">worldsheet</a> of <a class="existingWikiWord" href="/nlab/show/strings">strings</a>, boundary conformal field theories is about <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> with prescribed <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> for the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a>. These boundary conditions are interpreted as the <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> that the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> may “end on”.</p>
+<p>For the special case of <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a> understood as the <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> on the <a class="existingWikiWord" href="/nlab/show/worldsheet">worldsheet</a> of <a class="existingWikiWord" href="/nlab/show/strings">strings</a>, boundary conformal field theory is the key ingredient of <a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">perturbative string theory</a> with prescribed <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> for the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a>. From the <a class="existingWikiWord" href="/nlab/show/target+spacetime">target spacetime</a>-perspective these <a class="existingWikiWord" href="/nlab/show/boundary+conditions">boundary conditions</a> are interpreted as the <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> that the <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> may “end on”.</p>
 
 <p>In this way 2d BCFT can serve to give an <a class="existingWikiWord" href="/nlab/show/algebra">algebraic</a> definition of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a>, independent of or complementary to their incarnation in the <a class="existingWikiWord" href="/nlab/show/target+space">target</a>-<a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>. In particular <a class="existingWikiWord" href="/nlab/show/fractional+D-branes">fractional D-branes</a> may be described this way as boundary conditions for the <a class="existingWikiWord" href="/nlab/show/2d+CFTs">2d CFTs</a> describing <a class="existingWikiWord" href="/nlab/show/open+strings">open strings</a> propagating in <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a>.</p>
 
@@ -785,6 +785,20 @@ margin-left: 0em;
 <p>It has been argued that, therefore, for <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a> <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a>s the classification of <a class="existingWikiWord" href="/nlab/show/equivalence+classes">equivalence classes</a> of BCFT boundary states under <a class="existingWikiWord" href="/nlab/show/renormalization+group+flow">renormalization group flow</a> should reproduce the expected classification of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> by the (<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/twisted+K-theory">twisted K-theory</a>) <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of the <a class="existingWikiWord" href="/nlab/show/target+spacetime">target spacetime</a> (<a href="#Moore03">Moore 03, section 3</a>).</p>
 
 <p>While this gives, in principle, a precise algebraic definition of <a class="existingWikiWord" href="/nlab/show/D-brane+charge">D-brane charge</a> from the <a class="existingWikiWord" href="/nlab/show/worldsheet">worldsheet</a>-perspective, in practice it is hard to follow the <a class="existingWikiWord" href="/nlab/show/renormalization+group+flow">renormalization group flow</a> of the boundary states. The proposal has been checked in some special cases (e.g. <a href="#BraunSchaeferNameki05">Braun &amp; Schaefer-Nameki 05</a>). Other authors reported some discrepancies (<a href="#QuirozStefanski01">Quiroz-Stefanski 01</a>)</p>
+
+<p>Specifically for <a class="existingWikiWord" href="/nlab/show/fractional+D-branes">fractional D-branes</a> at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a> the relevant boundary states are <a class="existingWikiWord" href="/nlab/show/sums">sums</a> of boundary states for each “<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math>-twisted sector” of the <a class="existingWikiWord" href="/nlab/show/closed+string">closed string</a> <a class="existingWikiWord" href="/nlab/show/2d+CFT">2d CFT</a>, consisting of those string configurations that are closed in the <a class="existingWikiWord" href="/nlab/show/covering+space">covering space</a> up to the <a class="existingWikiWord" href="/nlab/show/action">action</a> of the element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∈</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">g \in G</annotation></semantics></math>:</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/TwistedSector.jpg" width="300" />
+</center>
+<blockquote>
+<p>graphics grabbed from <a href="#BCR00">BCR 00</a></p>
+</blockquote>
+
+<p>Here the <a class="existingWikiWord" href="/nlab/show/coefficient">coefficient</a> of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math>-twisted sector in the total boundary state is proprotional to the value <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>χ</mi> <mi>V</mi></msub><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\chi_V(g)</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/character">character</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>χ</mi> <mi>V</mi></msub></mrow><annotation encoding="application/x-tex">\chi_V</annotation></semantics></math> of some <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/representation">representation</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>∈</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>=</mo><msub><mi>KU</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">V \in R_{\mathbb{C}}(G) = KU_G(\ast)</annotation></semantics></math> (e.g. <a href="#RecknagelSchomerus13">Recknagel-Schomerus 13 (4.102)</a>). This makes it plausible that the <a class="existingWikiWord" href="/nlab/show/RG-flow">RG-flow</a>-<a class="existingWikiWord" href="/nlab/show/equivalence+classes">equivalence classes</a> of the boundary states for <a class="existingWikiWord" href="/nlab/show/fractional+D-branes">fractional D-branes</a> do coincide with the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>KU</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>=</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">KU_G(\ast) = R_{\mathbb{C}}(G)</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> singularity (the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>).</p>
+
+<blockquote>
+<p>But maybe this has not yet been actually proven?</p>
+</blockquote>
 
 <h2 id="references">References</h2>
 
@@ -817,13 +831,13 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li id="RecknagelSchomerus13"><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Conformal Field Theory and the Worldsheet Approach to D-branes</em>, Cambridge 2013 (<a href="http://inspirehep.net/record/1308990">spire:1308990</a>)</li>
+<li id="RecknagelSchomerus99"><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Deformation Theory and Moduli Spaces of D-Branes</em>, Nucl.Phys. B545 (1999) 233-282 (<a href="https://arxiv.org/abs/hep-th/9811237">arXiv:hep-th/9811237</a>)</li>
 </ul>
 
 <p>A textbook account is in</p>
 
 <ul>
-<li id="RecknagelSchomerus99"><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Deformation Theory and Moduli Spaces of D-Branes</em>, Nucl.Phys. B545 (1999) 233-282 (<a href="https://arxiv.org/abs/hep-th/9811237">arXiv:hep-th/9811237</a>)</li>
+<li id="RecknagelSchomerus13"><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>Boundary Conformal Field Theory and the Worldsheet Approach to D-branes</em>, Cambridge 2013 (<a href="http://inspirehep.net/record/1308990">spire:1308990</a>)</li>
 </ul>
 
 <h3 id="relation_to_ktheory">Relation to K-theory</h3>
@@ -881,7 +895,7 @@ margin-left: 0em;
 <p>Diaconescu, <a class="existingWikiWord" href="/nlab/show/Jaume+Gomis">Jaume Gomis</a>, <em>Fractional Branes and Boundary States in Orbifold Theories</em>, JHEP 0010 (2000) 001 (<a href="https://arxiv.org/abs/hep-th/9906242">arXiv:hep-th/9906242</a>)</p>
 </li>
 
-<li>
+<li id="BCR00">
 <p>M. Billo’, B. Craps, F. Roose, <em>Orbifold boundary states from Cardy’s condition</em>, JHEP 0101:038, 2001 (<a href="https://arxiv.org/abs/hep-th/0011060">arXiv:hep-th/0011060</a>)</p>
 </li>
 
@@ -899,14 +913,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 07:57:54.
+  Last revised on September 28, 2018 at 08:59:25.
   See the <a href="https://ncatlab.org/nlab/history/boundary conformal field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/boundary+conformal+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/boundary+conformal+field+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/boundary+conformal+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/boundary+conformal+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/boundary conformal field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
